[package]
name = "cargo-pants"
version = "0.2.2"
authors = ["Glenn Mohre <glenn.mohre@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/sonatype-nexus-community/cargo-pants"
description = "cargo-pants is a cargo subcommand application that provides a bill of materials and a list of which dependencies have a vulnerability, powered by Sonatype OSSIndex"
license = "Apache-2.0"

[[bin]]
name = "cargo-pants"
path = "src/bin/pants.rs"

[[bin]]
name = "cargo-iq"
path = "src/bin/iq.rs"

[dependencies]
ansi_term = "0.12.1"
atty = "0.2"
chrono = { version = "0.4", optional = true }
clap = "2.32.0"
env_logger = "0.6.1"
http = "0.2.4"
log = "0.4.0"
packageurl = "0.2.0"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = "1.0.42"
serde_derive = "1.0.42"
serde_json = "1.0.16"
terminal_size = "0.1.17"
textwrap = "0.13.4"
thiserror = "1.0.25"
toml = "0.4"
url = "1.7.0"
quick-xml = "0.22.0"
indicatif = "0.16.2"
console = "0.14.1"
cli-table = "0.4.6"
log4rs = { version = "1.0.0", default-features = false, features = ["json_encoder", "config_parsing", "file_appender"] }
dirs = "3.0.2"
cargo_metadata = "0.13.1"
ptree = "0.3"
cargo-tree = "0.29.0"
petgraph = "0.5.1"

[dev-dependencies]
mockito = "0.30.0"
