cargo-features = ["rust-version"]

[package]
name = "cargo-pants"
version = "0.3.2"
authors = ["Glenn Mohre <glenn.mohre@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/sonatype-nexus-community/cargo-pants"
description = "cargo-pants is a cargo subcommand application that provides a bill of materials and a list of which dependencies have a vulnerability, powered by Sonatype OSSIndex"
license = "Apache-2.0"
rust-version = "1.53"

[[bin]]
name = "cargo-pants"
path = "src/bin/pants/main.rs"

[[bin]]
name = "cargo-iq"
path = "src/bin/iq/main.rs"

[dependencies]
structopt = "0.3.22"
log = "0.4.0"
packageurl = "0.2.0"
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = "1.0.42"
serde_derive = "1.0.42"
serde_json = "1.0.16"
terminal_size = "0.1.17"
textwrap = "0.13.4"
thiserror = "1.0.25"
url = "1.7.0"
quick-xml = { version = "0.22.0", default-features = false }
indicatif = { version = "0.16.2", default-features = false }
console = { version = "0.14.1", default-features = false }
log4rs = { version = "1.0.0", default-features = false, features = ["json_encoder", "config_parsing", "file_appender"] }
dirs = "3.0.2"
cargo_metadata = "0.13.1"
petgraph = "0.5.1"
term-table = "1.3.1"

[dev-dependencies]
env_logger = "0.6.1"
mockito = "0.30.0"
