[package]
name = "cargo-pants"
version = "0.4.15"
authors = ["Glenn Mohre <glenn.mohre@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/sonatype-nexus-community/cargo-pants"
description = "cargo-pants is a cargo subcommand application that provides a bill of materials and a list of which dependencies have a vulnerability, powered by Sonatype OSSIndex"
license = "Apache-2.0"
rust-version = "1.61"

[[bin]]
name = "cargo-pants"
path = "src/bin/pants/main.rs"

[[bin]]
name = "cargo-iq"
path = "src/bin/iq/main.rs"

[dependencies]
cargo_metadata = "0.14.1"
console = { version = "0.15.0", default-features = false }
dirs = "4.0.0"
indicatif = { version = "0.16.2", default-features = false }
packageurl = "0.3.0"
petgraph = "0.6.0"
quick-xml = { version = "0.23.1", default-features = false }
reqwest = { version = "0.11.9", features = ["json", "blocking"] }
semver = "1.0.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.69"
structopt = "0.3.25"
term-table = "1.3.2"
terminal_size = "0.1.17"
textwrap = "0.14.2"
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
url = "2.2.2"

[dev-dependencies]
env_logger = "0.9.0"
mockito = "0.30.0"

[features]
vendored-openssl = ["reqwest/native-tls-vendored"]
